--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -40,10 +40,11 @@ test:
     - pip
 
 about:
-  home: https://github.com/GiorgiaTortora/napari-roi-registration
+  home: https://pypi.org/project/napari-roi-registration
   summary: A plugin to perform roi registration.
   license: BSD-3-Clause
   license_file: LICENSE
+  dev_url: https://github.com/GiorgiaTortora/napari-roi-registration
 
 extra:
   recipe-maintainers:
