--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,10 +25,10 @@ requirements:
     - napari
     - numpy
     - opencv
-    - openpyxl
+    - openpyxl  # Not imported but in requirements
     - pandas  # Imported but not in requirements
     - python >=3.8
-    - qtpy
+    - qtpy  # Not imported but in requirements
     - scikit-image
 
 test:
